syntax = "proto3";

option csharp_namespace = "Inanna.LibraryContext.Api";

import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

package api_v1;

service MangaService {
  rpc CreateManga (CreateMangaRequest) returns (CreateMangaResponse) {
    option (google.api.http) = {
      post: "/v1/CreateManga"
      body: "*"
    };
  };
  rpc AddNewVolumeToManga (AddNewVolumeToMangaRequest) returns (AddNewVolumeToMangaResponse) {
    option (google.api.http) = {
      post: "/v1/AddNewVolumeToManga/{manga_id}"
      body: "new_volume"
    };
  };
}
//state
enum State {
    Publishing = 0;
    Completed = 1;
    Deprecated = 2;
}

message CreateMangaRequest {
  string title = 1;
  State state = 2;
  int32 publisher_id = 3;
  google.protobuf.BytesValue cover_bytes = 4;
  google.protobuf.StringValue cover_content_type = 5;
  repeated string genres = 6;
}

message CreateMangaResponse {
  int32 manga_id = 1;
}

message AddNewVolumeToMangaRequest {
  int32 manga_id = 1;
  NewVolume new_volume = 2;
}
message NewVolume {
  string title = 1;
  string number = 2;
}

message AddNewVolumeToMangaResponse {
  int32 volume_id = 1;
}